Fixed a bug in design of animations in ipad. Changed the saving events of scroller position in order to work on mobile devices. Some minor design changes of lessons.

--- a/styles/about_me.css
+++ b/styles/about_me.css
@@ -8,6 +8,10 @@
          height: 40%;
          }
 }
+h1 {
+    margin-top: 3vh;
+    margin-bottom: 5vh;
+}
 .text {
     background-color: rgba(255,255,255,0.5);
     border-radius: 10px;
